assets/css/components/cards/shared.css
/*
 * Shared Article Cards CSS
 * Basic styling shared among the various article cards
 */
article,
.card,
.card-content,
footer {
  overflow: visible !important;
}

article {
}

.card {
  overflow: hidden;
}

.card h2 {
  font-family: var(--display);
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.2;
  text-wrap: pretty;
}

.card.tag-hash-note h2 {
  display: none;
}

.card h2 a {
  color: var(--color-text-primary);
  font-weight: 600;
  transition: color 0.3s ease;
}

.card h2 a:hover {
  color: var(--color-orange);
}

.posts-container article {
  margin-bottom: 6rem;
  position: relative;
  z-index: auto;
}

.post-content blockquote,
.post-content code,
.post-content ol,
.post-content p,
.post-content ul {
  font-size: var(--text-baseplus);
  line-height: 1.5;
  margin-bottom: var(--space-md);
}

.post-content blockquote {
  border-left: 2px solid #9cb4d8;
  margin-left: 0;
  padding-left: 14px;
}

.post-content ul,
.post-content ol {
  margin-bottom: 24px;
  margin-left: 0px;
}

.post-content ul {
  list-style: none;
}

.post-content ul ul {
  margin: 3px 0 0;
  padding-left: 20px;
}

.post-content ul li {
  margin-bottom: 3px;
  padding-left: 0;
  position: relative;
}

.post-content ul li:before {
  background: linear-gradient(135deg, #000000 0%, #444444 100%);
  border-radius: 50%;
  content: '';
  height: 10px;
  left: -20px;
  position: absolute;
  top: 9.5px;
  width: 10px;
}

.post-content ol {
  counter-reset: circle-counter;
  list-style: none;
}

.post-content ol ol {
  margin: 3px 0 0;
  padding-left: 20px;
}

.post-content ol li {
  counter-increment: circle-counter;
  font-family: var(--sans);
  margin-bottom: 3px;
  padding-left: 32px;
  position: relative;
}

.post-content ol li::before {
  align-items: center;
  background-color: var(--color-fill-primary);
  border-radius: 50%;
  color: white;
  content: counter(circle-counter);
  display: flex;
  font-size: 13px;
  font-weight: 500;
  height: 22px;
  justify-content: center;
  left: 0;
  position: absolute;
  top: 2.5px;
  width: 22px;
}

.post-content a {
  color: var(--color-text-primary);
  font-weight: 600;
  text-decoration: underline;
  text-decoration-color: var(--color-orange);
  text-decoration-thickness: 2px;
  text-underline-offset: 3px;
  transition:
    color 0.3s ease,
    text-decoration-color 0.3s ease;
}

.post-content a:hover {
  color: var(--color-red);
  text-decoration-color: transparent;
}

.post-content figure {
  margin-bottom: var(--space-xl);
}

.post header {
  align-items: flex-start;
  display: flex;
}

.meta {
  align-items: flex-end;
  color: var(--color-text-primary);
  display: flex;
  font-size: 18px;
  font-weight: 500;
  gap: 16px;
  margin: 0;
  text-align: right;
}

.meta > * {
  line-height: 1;
  margin: 0;
  padding: 0;
}

.meta .pub-date {
  align-items: center;
  display: inline-flex;
  height: auto;
}

.meta span {
  display: flex;
  font-weight: 500;
  transition:
    background-color 0.2s ease,
    color 0.2s ease,
    transform 0.2s ease;
  text-align: right;
}

.meta span.tag {
  margin-left: -160px;
  margin-top: 12px;
  text-align: right;
}

.meta .tag {
  color: var(--color-text-primary);
  font-weight: 400;
  position: relative;
  z-index: 2;
  text-align: right;
}

.meta .tag a {
  color: var(--color-text-primary);
  font-weight: 500;
}

.meta .tag a:hover {
  color: var(--color-content-on-dark);
}

.meta .domain-pill {
  color: var(--color-text-primary);
  font-family: 'pf-reminder', serif;
  font-size: 16px;
  font-weight: 500;
  z-index: 1;
  display: none;
}

.meta .domain-pill img {
  filter: drop-shadow(0px 1px 1px rgba(0, 0, 0, 0.1));
  image-rendering: -webkit-optimize-contrast;
  margin: -3px 0 0 0;
}

.meta .bookmark-source {
  background: var(--color-background-tertiary);
  background: transparent;
  border-radius: 9999px;
  font-weight: 500;
  height: auto;
  padding: 0;
}

.meta .tag:hover {
  background-color: var(--color-red);
  color: var(--color-content-on-dark);
  transform: scale(1.1);
}

.meta svg {
  display: inline;
  height: 14px;
  margin: -2px 2px 0 0;
  stroke: #fff;
  vertical-align: middle;
  width: 14px;
}

.bookmark footer,
.card footer,
.note footer,
.quote footer,
.video-container footer {
  align-items: center;
  display: flex;
  gap: 12px;
  justify-content: space-between;
  margin: var(--space-2xl) 8px 0 8px;
}

article footer .post-info {
  align-items: center;
  display: flex;
  gap: 6px;
}

.post-topics {
  align-content: center;
  display: flex;
  font-size: 13px;
  font-weight: 500;
  gap: 12px;
  letter-spacing: 0.15px;
}

footer .pub-date {
  font-family: var(--sans);
  font-size: 14px;
  font-weight: 400;
}

footer a.avatar img {
  border-radius: 32px;
  box-shadow: none;
  filter: grayscale(70%);
}

.post-topics li {
  list-style-type: none;
}

.post-topics a {
  color: var(--color-text-secondary);
  font-weight: 500;
}

.post-topics a:hover {
  color: var(--color-red);
}

